--- a/mainapp/pom.xml
+++ b/mainapp/pom.xml
@@ -8,10 +8,10 @@
         <version>2.4.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>pl.test.module.main</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>pl.test</groupId>
+    <artifactId>mainapp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>main</name>
+    <name>mainapp</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>15</java.version>
@@ -26,18 +26,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>impl</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
